# Crystal

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
CrystalEngine/: CMakeLists.txt  CMakeSettings.json  cpp.hint  encoding.py
CrystalEngine/assets/: init.json  settings.json
CrystalEngine/assets/constants/: contents.json
CrystalEngine/assets/constants/textures/pure/: Cyan.json  Half.json  OneTenth.json  ThreeTenth.json  TwoTenth.json  White.json
CrystalEngine/assets/editor/: contents.json
CrystalEngine/assets/editor/shaders/: geometry.hlsl  grayscale.json  model.vert  sprite.hlsl
CrystalEngine/assets/editor/textures/: Cross.json  Frame.json  Panel.json  box.json  boxBlack.json  boxNoB.json
CrystalEngine/assets/engine/: contents.json
CrystalEngine/assets/engine/meshes/: Bunny.json  Capsule.json  Cube.json  Floor.json  Knob.json  Monkey.json  Sphere.json  hero.json  hero.mtl  sibenik.json
CrystalEngine/assets/engine/meshes/Sibenik/: sibenik_2.mtl  sibenik_2_mtl.json
CrystalEngine/assets/engine/scene/: Bunny.json  Knob.json  WhiteFurnace.json  WhiteFurnaceVol.json  res  sibenik.json
CrystalEngine/assets/engine/shaders/: Geometry.json  Skybox.hlsl  Skybox.json  Sprite.json  model.frag  model.json  triangle.frag  triangle.hlsl  triangle.json
CrystalEngine/assets/engine/shaders/PBR/: Basic.hlsl  Basic.json  Irradiance.hlsl  Irradiance.json  Microfacet.hlsl  Microfacet.json  Microfacet_KC.hlsl  Microfacet_KC.json  Mirror.hlsl  Mirror.json
CrystalEngine/assets/engine/textures/: Eavg.json  Emu.json  LUT_cpu.json  White.json
CrystalEngine/assets/engine/textures/Environment/: DiningRoom.json  TestWB.json
CrystalEngine/assets/engine/textures/Sibenik/: Kamen.json  Kamen_stup.json  Mramor.json
CrystalEngine/assets/raytracer/: contents.json
CrystalEngine/assets/raytracer/shaders/: PathTracer.hlsl  PathTracer.json  ToneMapping.hlsl  ToneMapping.json
CrystalEngine/assets/ui/: contents.json
CrystalEngine/assets/ui/textures/: Box.json  BoxBlack.json  BoxNoB.json  Cross.json  Frame.json  Panel.json
CrystalEngine/assets/ui/textures/Test/: Dots.json
CrystalEngine/src/: CMakeLists.txt  Crystal.h  Engine.cpp  Engine.h
CrystalEngine/src/Core/: Application.h  InitArgs.h
CrystalEngine/src/Core/Asset/: AssetCommon.h  AssetManager.cpp  AssetManager.h  AssetPackage.cpp  AssetPackage.h
CrystalEngine/src/Core/Asset/Content/: Font.cpp  Font.h
CrystalEngine/src/Core/Asset/Loader/: FontLoader.cpp  FontLoader.h  ShaderLoader.cpp  TextureLoader.h
CrystalEngine/src/Core/Input/: InputCode.h  InputCommon.h  InputController.cpp  InputController.h
CrystalEngine/src/Core/Interfaces/: IFileSystem.h
CrystalEngine/src/Core/Interfaces/Graphics/: GraphicsCommon.cpp  GraphicsCommon.h  GraphicsInterfaces.h  IGraphicsDevice.h  IPipelineResourceObject.h  IPipelineStateObject.h
CrystalEngine/src/Core/Platform/: IGameWindow.h  IGraphicsDevice.h  IPlatformProvider.h  Platforms.h
CrystalEngine/src/Core/Platform/Graphics/: GraphicsCommon.cpp  GraphicsCommon.h  GraphicsInterfaces.h  IGraphicsDevice.h  IShaders.h
CrystalEngine/src/Core/Render/: GeometryRenderer.cpp  GeometryRenderer.h  RenderCommon.h  RenderExports.h  SpriteBatch.cpp  SpriteBatch.h
CrystalEngine/src/Core/UI/: UICommon.h  UIEventArgs.h  UIExports.h  UIState.cpp  UIState.h  UIStateMachine.cpp  UIStateMachine.h
CrystalEngine/src/Core/UI/Common/: UICommon.h  UIEventArgs.h  UIStyle.cpp  UIStyle.h
CrystalEngine/src/Core/UI/Elements/: UIElement.cpp  UIElement.h  UIIconButton.cpp  UIIconButton.h  UIImage.cpp  UIImage.h  UIInputBox.cpp  UIInputBox.h  UILabel.cpp  UILabel.h  UILayout.cpp  UILayout.h  UIPanel.cpp  UIPanel.h  (+9 more)
CrystalEngine/src/Core/Utils/: Encoding.cpp  Encoding.h  Event.h  FixedThreadPool.cpp  GameTimer.cpp  GameTimer.h  Geometry.h  IO.cpp  IO.h  Logger.cpp  Math.h  MemoryAlloc.h  MemoryPool.cpp  MemoryPool.h  Misc.h  ObjLoader.cpp
CrystalEngine/src/Editor/: CMakeLists.txt
CrystalEngine/src/Editor/src/: CrystalTracer.cpp  main.cpp
CrystalEngine/src/Interfaces/: IClipBoard.h  IFileSystem.h  IGameWindow.h
CrystalEngine/src/Interfaces/FileSystem/: FSCommon.h  File.cpp  File.h  IFileStream.cpp  Path.cpp  Path.h
CrystalEngine/src/Interfaces/Graphics/: GraphicsCommon.h  GraphicsInterfaces.h  IGraphicsContext.h  IGraphicsDevice.h  IPipelineResourceObject.h  IPipelineStateObject.h
CrystalEngine/src/RayTracer/: CMakeLists.txt
CrystalEngine/src/RayTracer/src/: GPUPresenter.cpp  GPUPresenter.h  Presenter.cpp  Presenter.h  main.cpp
CrystalEngine/src/Runtime/: Application.h  CMakeLists.txt  Crystal.h  Engine.cpp  Engine.h
CrystalEngine/src/Runtime/Platform/: CMakeLists.txt  PlatformFactory.cpp  PlatformFactory.h
CrystalEngine/src/Tests/: Camera.h  OrbitControllerTest.cpp  OrbitControllerTest.h  QuadTest.cpp  QuadTest.h  RenderTargetTest.cpp  RenderTargetTest.h  TriangleTest.cpp  TriangleTest.h
CrystalEngine/src/Tests/Integrated/: OrbitControllerTest.cpp  QuadTest.cpp  RenderTargetTest.cpp  TriangleTest.cpp  TriangleTest.h  UITest.cpp  UITest.h
CrystalEngine/src/Tools/: CMakeLists.txt
CrystalEngine/src/Tools/PBR/: CMakeLists.txt  IrradianceMapGenerator.cpp  IrradianceMapGenerator.h  KullaConty.cpp  LUTGenerator.cpp  PrefilterGenerator.cpp
CrystalEngine/src/Utils/: Event.h  Geometry.h  Math.h
CrystalEngine/test/: CMakeLists.txt  test.h
CrystalEngine/test/Core/: FileSystem_test.cpp  Utils_test.cpp
CrystalEngine/test/Integrated/: Camera.h  OrbitControllerTest.cpp  QuadTest.cpp  QuadTest.h  RenderTargetTest.cpp  RenderTargetTest.h  TriangleTest.cpp
CrystalEngine/test/Integrated/UIStates/: TestState.cpp  TestState.h
CrystalEngine/test/Runtime/: CMakeLists.txt  FileSystem_Test.cpp  Utils_Test.cpp
CrystalTracer/: CMakeLists.txt
CrystalTracer/src/: Camera.cpp  Camera.h  CrystalTracer.cpp  CrystalTracer.h  main.cpp  test.h  testobj.h
CrystalTracer/src/UI/: Canvas.h  EditorState.cpp  EditorState.h
CrystalTracer/src/UI/View/: Canvas.cpp  Canvas.h  DisplayPanel.cpp  DisplayPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  ToolBarPanel.cpp  ToolBarPanel.h
(+407 files in other folders)
