cmake_minimum_required (VERSION 3.14)

set(TARGET_NAME "CrystalTracer")

file(GLOB_RECURSE CrystalTracerSources CONFIGURE_DEPENDS "src/*.cpp" "src/*.h")
add_executable (${TARGET_NAME} ${CrystalTracerSources})

set_target_properties(${TARGET_NAME}
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    PDB_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

set_target_properties(${TARGET_NAME} PROPERTIES
CXX_STANDARD 17
CXX_STANDARD_REQUIRED ON
CXX_EXTENSIONS OFF)

target_include_directories(${TARGET_NAME} PRIVATE "src")

target_link_libraries(${TARGET_NAME} PRIVATE "CrystalEngine_Runtime")


get_target_property(CRYSTAL_RUNTIME_OUTPUT_DIRECTORY ${TARGET_NAME} RUNTIME_OUTPUT_DIRECTORY)
add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
COMMAND ${CMAKE_COMMAND} -E remove_directory "${BINARY_ROOT_DIR}/${ENGINE_ASSET_DIR}"
COMMAND ${CMAKE_COMMAND} -E copy_directory "${ENGINE_ROOT_DIR}/${ENGINE_ASSET_DIR}" "${CRYSTAL_RUNTIME_OUTPUT_DIRECTORY}/${ENGINE_ASSET_DIR}"
)